--- a/client/package.json
+++ b/client/package.json
@@ -13,17 +13,21 @@
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.0.2",
     "@mui/x-data-grid": "^7.16.0",
+    "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.7",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
     "gantt-task-react": "^0.3.9",
     "lucide-react": "^0.439.0",
-    "next": "14.2.8",
+    "next": "^14.2.13",
     "numeral": "^2.0.6",
     "react": "^18",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18",
-    "recharts": "^2.12.7"
+    "react-redux": "^9.1.2",
+    "recharts": "^2.12.7",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.16.5",
